[package]
name = "dismcp"
version = "0.1.0"
edition = "2024"
description = "A simple, lightweight HTTP server that exposes Discord bot functionality to AI agents via MCP"
license = "MIT"
repository = "https://github.com/semanavasco/dismcp"
homepage = "https://github.com/semanavasco/dismcp"
readme = "README.md"
keywords = ["discord-bot", "mcp-server", "tools", "ai", "http"]
categories = ["api-bindings", "web-programming::http-server"]
rust-version = "1.88.0"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
rmcp = { version = "2.2.0", features = ["transport-streamable-http-server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serenity = "0.12.5"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
